# artis-curseforge-mod-tracker

./: .gitignore  README.md  jsconfig.json  next.config.mjs  package.json  tailwind.config.js
src-tauri/: Cargo.toml  installer.nsi  tauri.conf.json
src-tauri/src/: main.rs  tray.rs
src-tauri/src/commands/: activity_commands.rs  mod.rs  mod_commands.rs  settings_commands.rs  webhook_commands.rs  webhook_template_commands.rs
src-tauri/src/database/: activities.rs  init.rs  mod.rs  mods.rs  settings.rs  webhook_templates.rs  webhooks.rs
src/app/: layout.jsx  page.jsx
src/app/mods/: page.jsx
src/app/webhook-templates/: page.jsx
src/app/webhooks/: page.jsx
src/components/: AddModModal.jsx  AddWebhookModal.jsx  CloseConfirmationModal.jsx  ColorPicker.jsx  DeleteConfirmationModal.jsx  DiscordPreview.jsx  ModCard.jsx  QuickStartGuide.jsx  RecentActivity.jsx  Settings.jsx  Sidebar.jsx  TrackedMods.jsx  UpdateCheckButton.jsx  UpdateCountdown.jsx  WebhookAssignModal.jsx  WebhookCard.jsx  WebhookEditor.jsx  WebhookEditorModal.jsx
src/contexts/: UpdateServiceContext.js
src/hooks/: useContextMenu.js  useModUpdateChecker.js  usePreventBrowserShortcuts.js  useUpdateCheck.js
src/styles/: globals.css
